<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.modelingbrain.home.detailModel.DetailActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_launcher_start" />

                    <TextView
                        android:id="@+id/model_name"
                        style="@style/SubText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:maxLines="3"
                        android:text="@string/app_name" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>


