<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- ENGLISH VERSION -->
    <string name="model_name">Name:</string>

    <string name="result_of_modeling">Results of modeling</string>
    <string name="name_of_model_">Name of model: </string>

    <string name="name_model">Model</string>
    <string name="name_strategy">Strategy</string>
...
                 <item>Prediction.\nThis step involves determining the logical consequences of the hypothesis. One or more predictions are then selected for further testing. The less likely that the prediction would be correct simply by coincidence, the stronger evidence it would be if the prediction were fulfilled</item>
                 <item>Testing.\nThis is an investigation of whether the real world behaves as predicted by the hypothesis. Scientists (and other people) test hypotheses by conducting experiments. The purpose of an experiment is to determine whether observations of the real world agree with or conflict with the predictions derived from an hypothesis. If they agree, confidence in the hypothesis inc
                 <item>Analysis.\nThis involves determining what the results of the experiment show and deciding on the next actions to take. The predictions of the hypothesis are compared to those of the null hypothesis, to determine which is better able to explain the data</item>
             </string-array>

    <string-array name="str_Left_SCORE">
                 <item>Model SCORE</item>
                 <item>S - Symptoms.\nThis is the most visible(by "external" calibration) and perceived as submitted by the Client aspects of the situation/experience; state existing on the date</item>
                 <item>C - Cause.\nExperience in the past, gave rise to the present state</item>
                 <item>O - Outcome.\nThe purpose of the changes or the state, which should replace the present state</item>
                 <item>R - Resources.\nElements of User Experience, the presence of which can solve the current situation; they make possible the transition from the present state to the desired</item>
                 <item>E - Effects.\nResponses/impact on the achievement of the results, for the client and for his significant environment, state in the future, when the result has already been achieved</item>
             </string-array>
...
                 <item>A - Attainable.\nThe third criterion stresses the importance of goals that are realistic and attainable. While an attainable goal may stretch a team in order to achieve it, the goal is not extreme. That is, the goals are neither out of reach nor below standard performance, as these may be considered meaningless</item>
                 <item>R - Relevant.\nThe fourth criterion stresses the importance of choosing goals that matter</item>
                 <item>T - Time-bound.\nThe fifth criterion stresses the importance of grounding goals within a time frame, giving them a target date. A commitment to a deadline helps a team focus their efforts on completion of the goal on or before the due date</item>
             </string-array>

    <string-array name="str_Left_TOTE">
                 <item>Model T.O.T.E.</item>
                 <item>T1 - Test 1.\nTest to obtain some representation of the problem state</item>
                 <item>O  - Operate.\nOperate intervene in some way</item>
                 <item>T2 - Test 2.\nTest again to see if the desired result has been achieved. If it has not, loop back to operate. Compare T1 (desired) with T2 (current)</item>
                 <item>E  - Exit.\nExit - problem solved. T1 = T2</item>
             </string-array>

...
