<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_nav_folder"
            android:title="@string/nav_folder" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_nav_folder"
            android:title="@string/nav_archive" />
    </group>

    <item android:title="@string/navigation_drawer_other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_nav_help"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>